# k210-example

./: Cargo.toml  README.md
.cargo/: config
examples/: blinky.rs  gpio-console.rs  gpiohs-interrupt.rs  i2s_reading.rs  interrupt.rs  multi-core.rs  multi_core.rs  sdcard.rs  serial-console.rs
src/: main.rs
